tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__MoreHydrogen-AAAAAAAAAAAAAAAAAAALtQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2997,
  "prerequisites": [
    2996
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With more Oil in your hands, you are sure to have problems with the other inputs you need. Hydrogen is required to get any type of clean byproduct, and the amount you need scales with the speed at which your Chemical Reactors work. It is possible to get a lot of it from ores, and mining out a Limonite vein will get you enough to last a long while, but it will eventually run out. Which automatic sources can you choose from?\n\nThe simplest option is to electrolyze water. You can just keep feeding water for free, but it's a slow and inefficient process, although it also gives you Oxygen. You will need a few Electrolyzers running to keep it going at a decent pace.\n\nAn alternative option is to do this, but with salt water, obtained from Salty Root, if you have delved into IC2 crops. You will also get Chlorine that you will need very often in the next two tiers.\n\nLastly, did you know that most of the oil byproducts are organic compounds, and as such are made mostly of Carbon and Hydrogen? You can electrolyze most of them to get these elements, at a faster rate than water, but only if you have leftovers. Methane is one of the choices that you might have stockpiling. However, note that these byproducts often have fuel values and it's often better to use them as fuel to then electrolyze (salt) water.\n\nEither way, you will need Electrolyzers. Build at least an MV one to continue!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "More Hydrogen",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2996
  ],
  "rewards": [],
  "tasks": []
}
