tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__PushingwithAntiK-AAAAAAAAAAAAAAAAAAALxw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3015,
  "prerequisites": [
    3012
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want your generators to last, you'll want to make this. In fact, since safety is always the priority, you can't make HOG without this Anti-Knock Agent, a mixture that keeps the fuel from damaging the engine even when it is this powerful. There are two paths to get this automated: one with an LCR recipe, and the other with a DT. The LCR option is cheaper to build, as per usual, but it consumes considerably more power than the DT path, so this quest will focus on the latter. As before, having an initial higher investment to save energy in the long run is the way to go.\n\nThe DT path is a cycle between a Mixer and the tower itself, where each distillation extracts a bit of Anti-Knock Agent from the MTBE Reaction Mixture, and will need to be mixed again. The two inputs needed for the setup are Butene and Methanol. Butene is obtainable from any of the max-height DT distillations, and Methanol from a mixture of Hydrogen and Carbon Dioxide/Carbon Monoxide. If you have a Fermented Biomass setup, you will already have CO2 ready to go, and Hydrogen can be sourced from a variety of ways.\n\nMake this cycle, and you'll have a safe fuel.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Pushing with Anti-Knock Agent",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3012
  ],
  "rewards": [],
  "tasks": []
}
