tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__SimpleDistillati-AAAAAAAAAAAAAAAAAAALqA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2984,
  "prerequisites": [
    2986
  ],
  "properties": {
    "auto_claim": false,
    "desc": "As rich as Oil is, it's hardly useful for anything in this state. One of the most important parts in the processing chain is distillation, which separates the components of this black mixture by the difference in their boiling points. You can do this in a Distillery, starting in LV, but for now only one of the fractions can be obtained at a time: you must choose which one you want.\n\nLighter fractions are generally more useful than heavier ones, but that doesn't mean that lightest is best. For now, going for Sulfuric Light Fuel is the best option, since it will become a good source of power after being treated. Don't use unprocessed oil to power these machines, stick to Steam until you can use something better.\n\n[note]You can find info about the other fractions in the LV tab![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Simple Distillation",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2986
  ],
  "rewards": [],
  "tasks": []
}
