tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__SpecialRubberfro-AAAAAAAAAAAAAAAAAAALvA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3004,
  "prerequisites": [
    3001
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Another one of the Oil \"specials\" is Butadiene. It can be used in a few ways, including power, but where it shines is in making advanced rubber, specifically Styrene-Butadiene Rubber. You can make it in HV, but it is not required to have an improved rubber until the start of IV. There is a questline for this in the HV tab, so go check it out.\n\nThere is an equivalent alternative, Silicone Rubber, made from other inputs. They are mostly interchangeable, but they each have some unique use that makes it so you should have a good supply of both.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Special Rubber from Oil",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3001
  ],
  "rewards": [],
  "tasks": []
}
