tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__SpeedingwithOcta-AAAAAAAAAAAAAAAAAAALyQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3017,
  "prerequisites": [
    3012
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One of the components of High-Octane Gasoline, as the name implies, is Octane. It is so important to improve the fuel because of something called \"octane rating\", which measures how much the fuel resists compression without detonating. The energy that vehicles get to move around comes from this detonation, but being able to apply more compression allows for engine designs that are more efficient, but need the fuel to resist that increased force without detonating. That said, any of these fuels can be run in the engines you use, so the way to represent this efficiency bonus is in the fuel value.\n\n(There is a multi in the next tier that only runs on HOG, though. Don't forget it.)\n\nHow is Octane obtained, then? In the last tier, it was explained as coming from Light Fuel, and this is still how you should, and can obtain it: lightly hydro-cracked Light Fuel gives some Octane, so put a DT for it and leave your Diesel needs behind. It's time to move on.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Speeding with Octane",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3012
  ],
  "rewards": [],
  "tasks": []
}
