tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__SulfuricAcid-AAAAAAAAAAAAAAAAAAALsw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2995,
  "prerequisites": [
    2991
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This sulfuric waste that came out of the oil fractions could be voided, but it's actually a useful byproduct for your progression. The Hydrogen Sulfide that you obtained, mixed with Water in another Chemical Reactor will give back Diluted Sulfuric Acid, which can be turned into its more concentrated form by distilling it.\n\nSulfuric Acid is one of the most important chemicals in the pack, so make sure to use this opportunity to automate it. It's needed for circuits, amongst other things, so you will need a lot of it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sulfuric Acid",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2991
  ],
  "rewards": [],
  "tasks": []
}
